--- a/index.html
+++ b/index.html
@@ -1,59 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Loopstudios landing page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  About
-  Careers
-  Events
-  Products
-  Support
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
-  Immersive experiences that deliver
+    <!-- Import Semantic UI library -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+      integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
+      crossorigin="anonymous"
+    />
 
-  The leader in interactive VR
+    <link rel="stylesheet" href="./css/styles.css" />
 
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
+    <title>Loopstudios</title>
+  </head>
+  <body>
+    <header class="page-header">
+      <div class="ui container">
+        <nav class="site-nav">
+          <a class="site-logo" href="#"></a>
+          <ul class="ui small secondary inverted menu nav-menu">
+            <li class="item"><a href="#">About</a></li>
+            <li class="item"><a href="#">Careers</a></li>
+            <li class="item"><a href="#">Events</a></li>
+            <li class="item"><a href="#">Products</a></li>
+            <li class="item"><a href="#">Support</a></li>
+          </ul>
+        </nav>
+        <h1>Immersive experiences that deliver</h1>
+      </div>
+    </header>
 
-  Our creations
+    <main class="ui container">
+      <article class="brief-about">
+        <div class="ui big image">
+          <img
+            src="./images/desktop/image-interactive.jpg"
+            alt="Interactive VR"
+          />
+        </div>
+        <div class="about-info">
+          <h2>The leader in interactive VR</h2>
+          <p>
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
+      </article>
 
-  See all
+      <article class="our-creations">
+        <header>
+          <h2>Our creations</h2>
+          <button class=""><a href="#">See all</a></button>
+        </header>
+        <section class="creations">
+          <div class="creation">
+            <img
+              src="./images/desktop/image-deep-earth.jpg"
+              alt="Earth from Space"
+            />
+            <h3>Deep earth</h3>
+          </div>
+          <div class="creation">
+            <img
+              src="./images/desktop/image-night-arcade.jpg"
+              alt="Arcade Machine"
+            />
+            <h3>Night arcade</h3>
+          </div>
+          <div class="creation">
+            <img
+              src="./images/desktop/image-soccer-team.jpg"
+              alt="Soccer Player Running"
+            />
+            <h3>Soccer team VR</h3>
+          </div>
+          <div class="creation">
+            <img
+              src="./images/desktop/image-grid.jpg"
+              alt="Side of a Sports Car"
+            />
+            <h3 style="width: 50%">The grid</h3>
+          </div>
+          <div class="creation">
+            <img
+              src="./images/desktop/image-from-above.jpg"
+              alt="Mountain Highway from above"
+            />
+            <h3>From up above VR</h3>
+          </div>
+          <div class="creation">
+            <img src="./images/desktop/image-pocket-borealis.jpg" alt="" />
+            <h3>Pocket borealis</h3>
+          </div>
+          <div class="creation">
+            <img src="./images/desktop/image-curiosity.jpg" alt="Aurora" />
+            <h3>The curiosity</h3>
+          </div>
+          <div class="creation">
+            <img src="./images/desktop/image-fisheye.jpg" alt="Fisheye" />
+            <h3>Make it fisheye</h3>
+          </div>
+        </section>
+      </article>
+    </main>
 
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
-
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <footer>
+      <div class="ui container site-footer">
+        <section class="site-nav">
+          <a class="site-logo" href="#"></a>
+          <ul class="ui small secondary inverted menu nav-menu">
+            <li class="item"><a href="#">About</a></li>
+            <li class="item"><a href="#">Careers</a></li>
+            <li class="item"><a href="#">Events</a></li>
+            <li class="item"><a href="#">Products</a></li>
+            <li class="item"><a href="#">Support</a></li>
+          </ul>
+        </section>
+        <section>
+          <div class="social-nav">
+            <div>
+              <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook  Icon" /></a>
+            </div>
+            <div>
+              <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter Icon" /></a>
+            </div>
+            <div>
+              <a href="#"><img src="./images/icon-pinterest.svg" alt="Pinterest Icon" /></a>
+            </div>
+            <div>
+              <a href="#"><img src="./images/icon-instagram.svg" alt="Instagram Icon" /></a>
+            </div>
+          </div>
+          <p class="copy-rights">© 2021 Loopstudios. All rights reserved.</p>
+        </section>
+      </div>
+      
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/ahmedbaligh" target="_blank">Ahmed Baligh</a
+        >.
+      </div>
+    </footer>
+  </body>
 </html>
