--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
     <main class="ui container">
       <article class="brief-about">
         <div class="ui big image">
-          <img
-            src="./images/desktop/image-interactive.jpg"
-            alt="Interactive VR"
-          />
+          <picture>
+            <source
+              media="(min-width: 800px)"
+              srcset="./images/desktop/image-interactive.jpg"
+            />
+            <img
+              src="./images/mobile/image-interactive.jpg"
+              alt="Interactive VR"
+            />
+          </picture>
         </div>
         <div class="about-info">
           <h2>The leader in interactive VR</h2>
@@ -74,50 +80,101 @@
         </header>
         <section class="creations">
           <div class="creation">
-            <img
-              src="./images/desktop/image-deep-earth.jpg"
-              alt="Earth from Space"
-            />
+            <picture>
+              <source
+                media="(min-width: 800px)"
+                srcset="./images/desktop/image-deep-earth.jpg"
+              />
+              <img
+                src="./images/mobile/image-deep-earth.jpg"
+                alt="Earth from Space"
+              />
+            </picture>
             <h3>Deep earth</h3>
           </div>
           <div class="creation">
-            <img
-              src="./images/desktop/image-night-arcade.jpg"
-              alt="Arcade Machine"
-            />
+            <picture>
+              <source
+                media="(min-width: 800px)"
+                srcset="./images/desktop/image-night-arcade.jpg"
+              />
+              <img
+                src="./images/mobile/image-night-arcade.jpg"
+                alt="Arcade Machine"
+              />
+            </picture>
             <h3>Night arcade</h3>
           </div>
           <div class="creation">
-            <img
-              src="./images/desktop/image-soccer-team.jpg"
-              alt="Soccer Player Running"
-            />
+            <picture>
+              <source
+                media="(min-width: 800px)"
+                srcset="./images/desktop/image-soccer-team.jpg"
+              />
+              <img
+                src="./images/mobile/image-soccer-team.jpg"
+                alt="Soccer Player Running"
+              />
+            </picture>
             <h3>Soccer team VR</h3>
           </div>
           <div class="creation">
-            <img
-              src="./images/desktop/image-grid.jpg"
-              alt="Side of a Sports Car"
-            />
-            <h3 style="width: 50%">The grid</h3>
+            <picture>
+              <source
+                media="(min-width: 800px)"
+                srcset="./images/desktop/image-grid.jpg"
+              />
+              <img
+                src="./images/mobile/image-grid.jpg"
+                alt="Side of a Sports Car"
+              />
+            </picture>
+            <h3 style="width: 100px">The grid</h3>
           </div>
           <div class="creation">
-            <img
-              src="./images/desktop/image-from-above.jpg"
-              alt="Mountain Highway from above"
-            />
+            <picture>
+              <source
+                media="(min-width: 800px)"
+                srcset="./images/desktop/image-from-above.jpg"
+              />
+              <img
+                src="./images/mobile/image-from-above.jpg"
+                alt="Mountain Highway from above"
+              />
+            </picture>
             <h3>From up above VR</h3>
           </div>
           <div class="creation">
-            <img src="./images/desktop/image-pocket-borealis.jpg" alt="" />
+            <picture>
+              <source
+                media="(min-width: 800px)"
+                srcset="./images/desktop/image-pocket-borealis.jpg"
+              />
+              <img
+                src="./images/mobile/image-pocket-borealis.jpg"
+                alt="Pocket borealis"
+              />
+            </picture>
             <h3>Pocket borealis</h3>
           </div>
           <div class="creation">
-            <img src="./images/desktop/image-curiosity.jpg" alt="Aurora" />
+            <picture>
+              <source
+                media="(min-width: 800px)"
+                srcset="./images/desktop/image-curiosity.jpg"
+              />
+              <img src="./images/mobile/image-curiosity.jpg" alt="Aurora" />
+            </picture>
             <h3>The curiosity</h3>
           </div>
           <div class="creation">
-            <img src="./images/desktop/image-fisheye.jpg" alt="Fisheye" />
+            <picture>
+              <source
+                media="(min-width: 800px)"
+                srcset="./images/desktop/image-fisheye.jpg"
+              />
+              <img src="./images/mobile/image-fisheye.jpg" alt="Fisheye" />
+            </picture>
             <h3>Make it fisheye</h3>
           </div>
         </section>
@@ -139,22 +196,30 @@
         <section>
           <div class="social-nav">
             <div>
-              <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook  Icon" /></a>
+              <a href="#"
+                ><img src="./images/icon-facebook.svg" alt="Facebook  Icon"
+              /></a>
             </div>
             <div>
-              <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter Icon" /></a>
+              <a href="#"
+                ><img src="./images/icon-twitter.svg" alt="Twitter Icon"
+              /></a>
             </div>
             <div>
-              <a href="#"><img src="./images/icon-pinterest.svg" alt="Pinterest Icon" /></a>
+              <a href="#"
+                ><img src="./images/icon-pinterest.svg" alt="Pinterest Icon"
+              /></a>
             </div>
             <div>
-              <a href="#"><img src="./images/icon-instagram.svg" alt="Instagram Icon" /></a>
+              <a href="#"
+                ><img src="./images/icon-instagram.svg" alt="Instagram Icon"
+              /></a>
             </div>
           </div>
           <p class="copy-rights">© 2021 Loopstudios. All rights reserved.</p>
         </section>
       </div>
-      
+
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
