feat: add hamburger nav. menu for small screens

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
     <header class="page-header">
       <div class="ui container">
         <nav class="site-nav">
-          <a class="site-logo" href="#"></a>
+          <div class="burger-header">
+            <a class="site-logo" href="#"></a>
+            <button class="burger-opener">
+              <img src="./images/icon-hamburger.svg" alt="" />
+            </button>
+          </div>
           <ul class="ui small secondary inverted menu nav-menu">
             <li class="item"><a href="#">About</a></li>
             <li class="item"><a href="#">Careers</a></li>
@@ -229,5 +234,6 @@
         >.
       </div>
     </footer>
+    <script src="./js/index.js"></script>
   </body>
 </html>
